--- a/static/style.css
+++ b/static/style.css
@@ -800,6 +800,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
+    cursor: pointer;
   }
 
   .blog-card:hover {
@@ -895,6 +896,10 @@ body {
     align-items: center;
     padding-top: 1rem;
     border-top: 1px solid rgba(255, 0, 0, 0.2);
+  }
+  .blog-card-link {
+    color: inherit;
+    text-decoration: none;
   }
 
   .read-more {
